--- a/pod/perl.pod
+++ b/pod/perl.pod
@@ -184,8 +184,10 @@ aux h2ph h2xs perlbug pl2pm pod2html pod2man splain xsubpp
     perl5271delta	Perl changes in version 5.27.1
     perl5270delta	Perl changes in version 5.27.0
     perl5260delta	Perl changes in version 5.26.0
+    perl5242delta	Perl changes in version 5.24.2
     perl5241delta	Perl changes in version 5.24.1
     perl5240delta	Perl changes in version 5.24.0
+    perl5224delta	Perl changes in version 5.22.4
     perl5223delta	Perl changes in version 5.22.3
     perl5222delta	Perl changes in version 5.22.2
     perl5221delta	Perl changes in version 5.22.1
