Tick off 5.22.4 and 5.24.2
That was probably the last 5.22. There may or may not be another 5.24.

--- a/Porting/release_schedule.pod
+++ b/Porting/release_schedule.pod
@@ -30,7 +30,8 @@ Code freezes (which happen in the 5.27.X series)
 
   2016-05-09  5.24.0 ✓        Ricardo Signes
   2017-01-14  5.24.1 ✓        Steve Hay
-  2017-07-??  5.24.2          Steve Hay
+  2017-07-15  5.24.2 ✓        Steve Hay
+  2017-??-??  5.24.3          Steve Hay
 
 =head2 Perl 5.22
 
@@ -38,7 +39,7 @@ Code freezes (which happen in the 5.27.X series)
   2015-12-13  5.22.1 ✓        Steve Hay
   2016-04-29  5.22.2 ✓        Steve Hay
   2017-01-14  5.22.3 ✓        Steve Hay
-  2017-07-??  5.22.4          Steve Hay
+  2017-07-15  5.22.4 ✓        Steve Hay
 
 =head1 DEVELOPMENT RELEASE SCHEDULE
 
