--- a/pod/perldelta.pod
+++ b/pod/perldelta.pod
@@ -130,6 +130,10 @@ L<XXX> has been upgraded from version A.xx to B.yy.
 
 L<ExtUtils::CBuilder> has been upgraded from version 0.280225 to 0.280227.
 
+=item *
+
+L<Time::HiRes> has been upgraded from version 1.9742 to 1.9743.
+
 =back
 
 =head2 Removed Modules and Pragmata
