--- a/pod/perldelta.pod
+++ b/pod/perldelta.pod
@@ -493,9 +493,33 @@ here.
 
 =head1 Acknowledgements
 
-XXX Generate this with:
+Perl 5.27.2 represents approximately 4 weeks of development since Perl 5.27.1
+and contains approximately 26,000 lines of changes across 290 files from 18
+authors.
 
-  perl Porting/acknowledgements.pl v5.25.5..HEAD
+Excluding auto-generated files, documentation and release tools, there were
+approximately 9,700 lines of changes to 150 .pm, .t, .c and .h files.
+
+Perl continues to flourish into its third decade thanks to a vibrant community
+of users and developers. The following people are known to have contributed the
+improvements that became Perl 5.27.2:
+
+Aaron Crane, Alberto Simões, Chris 'BinGOs' Williams, Dagfinn Ilmari
+Mannsåker, David Mitchell, E. Choroba, Eric Herman, Father Chrysostomos, James
+E Keenan, Karl Williamson, Lukas Mai, Ricardo Signes, Sawyer X, Steve Hay, Tony
+Cook, Vitali Peil, Yves Orton, Zefram.
+
+The list above is almost certainly incomplete as it is automatically generated
+from version control history. In particular, it does not include the names of
+the (very much appreciated) contributors who reported issues to the Perl bug
+tracker.
+
+Many of the changes included in this version originated in the CPAN modules
+included in Perl's core. We're grateful to the entire CPAN community for
+helping Perl to flourish.
+
+For a more complete list of all of Perl's historical contributors, please see
+the F<AUTHORS> file in the Perl source distribution.
 
 =head1 Reporting Bugs
 
