Add 5.27.2 to perlhist
(cherry picked from commit cf07591c56a81be8313edfa55671e8e741db95b3)

--- a/pod/perlhist.pod
+++ b/pod/perlhist.pod
@@ -623,6 +623,7 @@ the strings?).
 
  Sawyer X  5.27.0       2017-May-31     The 5.27 development track
  Eric      5.27.1       2017-Jun-20
+ Aaron     5.27.2       2017-Jul-20
 
 =head2 SELECTED RELEASE SIZES
 
