--- a/pod/perldelta.pod
+++ b/pod/perldelta.pod
@@ -119,7 +119,7 @@ XXX
 
 =item *
 
-L<XXX> has been upgraded from version A.xx to B.yy.
+L<Time::HiRes> has been upgraded from version 1.9733 to 1.9741.
 
 =back
 
