perldelta for VMS configure.com change
(taken from commit 29ce4d71249be11f0777ec24bb50a2df7b5c9ed8)

--- a/pod/perldelta.pod
+++ b/pod/perldelta.pod
@@ -332,9 +332,15 @@ L</Modules and Pragmata> section.
 
 =over 4
 
-=item XXX-some-platform
+=item VMS
 
-XXX
+=over 4
+
+=item *
+
+C<configure.com> now recognizes the VSI-branded C compiler.
+
+=back
 
 =back
 
