--- a/pod/perldelta.pod
+++ b/pod/perldelta.pod
@@ -121,6 +121,8 @@ XXX
 
 L<Time::HiRes> has been upgraded from version 1.9733 to 1.9741.
 
+Resolves [perl #128427], [perl #128445], [perl #128972], and [cpan #120032].
+
 =back
 
 =head2 Removed Modules and Pragmata
