document dirhandles vs filehandles
The statement that they are in separate namespaces was never really true.
Since the recent commit 489c16bfa14d460701bd76a4a4f0658f1200509a a
single I/O object can no longer be opened both ways at once, so the old
statement is now totally false.  Replace it with something describing
the new situation.

--- a/pod/perlfunc.pod
+++ b/pod/perlfunc.pod
@@ -4781,7 +4781,8 @@ DIRHANDLE may be an expression whose value can be used as an indirect
 dirhandle, usually the real dirhandle name.  If DIRHANDLE is an undefined
 scalar variable (or array or hash element), the variable is assigned a
 reference to a new anonymous dirhandle; that is, it's autovivified.
-DIRHANDLEs have their own namespace separate from FILEHANDLEs.
+Dirhandles are the same objects as filehandles; an I/O object can only
+be open as one of these handle types at once.
 
 See the example at L<C<readdir>|/readdir DIRHANDLE>.
 
