--- a/pod/perldelta.pod
+++ b/pod/perldelta.pod
@@ -64,33 +64,74 @@ C<for()> loops and similar constructs are now more efficient in most cases.
 
 =head1 Modules and Pragmata
 
-=head2 New Modules and Pragmata
-
-=over 4
-
-=item *
-
-XXX
-
-=back
-
 =head2 Updated Modules and Pragmata
 
 =over 4
 
 =item *
 
-L<XXX> has been upgraded from version A.xx to B.yy.
-
-=back
-
-=head2 Removed Modules and Pragmata
-
-=over 4
+L<B> has been upgraded from version 1.68 to 1.69.
 
 =item *
 
-XXX
+L<B::Concise> has been upgraded from version 1.000 to 1.001.
+
+=item *
+
+L<B::Debug> has been upgraded from version 1.24 to 1.25.
+NOTE: L<B::Debug> is deprecated and may be removed from a future version of Perl.
+
+=item *
+
+L<B::Deparse> has been upgraded from version 1.41 to 1.42.
+
+=item *
+
+L<base> has been upgraded from version 2.25 to 2.26.
+
+=item *
+
+L<Data::Dumper> has been upgraded from version 2.167 to 2.167_02.
+
+=item *
+
+L<Devel::Peek> has been upgraded from version 1.26 to 1.27.
+
+=item *
+
+L<ExtUtils::Constant> has been upgraded from version 0.23 to 0.24.
+
+=item *
+
+L<ExtUtils::ParseXS> has been upgraded from version 3.34 to 3.35.
+
+=item *
+
+L<ExtUtils::Typemaps> has been upgraded from version 3.34 to 3.35.
+
+=item *
+
+L<Filter::Simple> has been upgraded from version 0.93 to 0.94.
+
+=item *
+
+L<Module::CoreList> has been upgraded from version 5.20170720 to 5.20170821.
+
+=item *
+
+L<SelfLoader> has been upgraded from version 1.23 to 1.24.
+
+=item *
+
+L<Storable> has been upgraded from version 2.63 to 2.64.
+
+=item *
+
+L<threads> has been upgraded from version 2.16 to 2.17.
+
+=item *
+
+L<utf8> has been upgraded from version 1.19 to 1.20.
 
 =back
 
